feat: add views and attachments

--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,8 @@
   <body>
     <div
       id="ci-visualizer"
-      data-ci-viewxx="./visualizer/view.json"
-      data-ci-view="https://couch.cheminfo.org/cheminfo-public/ed3ce004536b755025fbd19526fc1483/view.json"
+      data-ci-viewxxn="./views/ed3ce004536b755025fbd19526fc1483/view.json"
+      data-ci-viewxx="https://couch.cheminfo.org/cheminfo-public/ed3ce004536b755025fbd19526fc1483/view.json"
       data-ci-config="./visualizer/config.json"
     ></div>
   </body>
